# raffinerie

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: windows-build.yml
docs/: guide-utilisateur.md
docs/superpowers/plans/: 2026-05-13-raffinerie-implementation.md
docs/superpowers/specs/: 2026-05-13-raffinerie-design.md
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: catalog.rs  ipc.rs  lib.rs  main.rs  persistence.rs  state.rs
src-tauri/src/aggregator/: mod.rs  monthly.rs
src-tauri/src/exporter/: mod.rs  monthly_sheet.rs  params_sheet.rs  resolver.rs  synthese.rs  value.rs  workbook.rs
src-tauri/src/filter/: eval.rs  mod.rs  set.rs
src-tauri/src/parser/: copy_block.rs  dump.rs  escape.rs  mod.rs
src-tauri/src/schema/: adresse_debiteur.rs  creance.rs  creance_regroupee.rs  etapeworkflow.rs  mod.rs  uge.rs
src-tauri/tests/: end_to_end.rs  real_dump.rs
